fixed dropdowns in sub sample and adjusted scrollbar in twocol-left

--- a/app/assets/stylesheets/browser.scss
+++ b/app/assets/stylesheets/browser.scss
@@ -268,7 +268,7 @@ $selected-sample-outline-color: #e0ffff;
     td {
       padding: 0 0 0 5px; 
       height: $row-height;
-      overflow: hidden;
+      overflow: visible;
       /*outline: 1pt solid #def; */
     }
     .name {
