--- a/app/assets/stylesheets/twocol.scss
+++ b/app/assets/stylesheets/twocol.scss
@@ -6,7 +6,7 @@
   .two-column-left {
     float: left;
     width: 300px;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: visible;
     position: relative;
   }
